tests/valid/lifetime/elision_multi_input_no_return.facet
fn touch(a: unrestricted &unrestricted isize, b: unrestricted &unrestricted isize) -> unrestricted () {
    ()
}
