tests/invalid/lifetime/elision_output_multiple_inputs.facet
fn bad(a: unrestricted &unrestricted isize, b: unrestricted &unrestricted isize) -> unrestricted &unrestricted isize {
    a
}
